fix: website name and icon

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/kodoksad.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/cameraLogo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="Tubes Algeo 2"content="Web site created using create-react-app"/>
-    <title>Tubes Algeo 2</title>
+    <title>MatchLens.</title>
   </head>
   <body>
     <div id="root"></div>
